# best-xi

./: .env.example  .gitignore  FAQ.md  Pipfile  Player stats S. Kanaan.xlsx  README.md  USER_AGREEMENT.md  USER_MANUAL.md  app.py  installed_packages.txt  packages.txt  pyproject.toml  requirements.txt  scratch.py
modules/: config.py  metric_selection.py  processing.py  scoring.py  styles.py  visualizations.py
sample_data/: Player stats S. Bassett.xlsx
src/: app.py
src/modules/: config.py  processing.py  styles.py
src/sample_data/: Player stats A. Janjic.xlsx  Player stats P. Five.xlsx  Player stats P. Four.xlsx  Player stats P. One.xlsx  Player stats P. Six.xlsx  Player stats P. Three.xlsx  Player stats P. Two.xlsx
streamlit_app/: requirements.txt
tests/: test_processing.py  test_scoring.py  test_visualizations.py
